<resources>
    <string name="app_name">RecylerViewPOC</string>
    <!--元件-->
    <string name="addProfile">建立個人檔案</string>
    <string name="ContactPage">通訊錄</string>
    <string name="SettingPage">更多設定</string>
    <string name="FBLogin">使用facebook個人資料</string>
    <string name="addContact">新增好友</string>
    <string name="addName">輸入姓名(必填)</string>
    <string name="addPhone">輸入電話(必填)</string>
    <string name="update">更新</string>
    <string name="city">縣/市名稱</string>
    <string name="street">街道</string>
    <string name="email">電子郵件</string>
    <string name="updateTo">更改為</string>
    <string name="delete">刪除</string>
    <string name="ContactName">名字</string>
    <string name="ContactPhone">手機</string>
    <string name="address">地址</string>
    <string name="none">無</string>
    <string name="dial">通話</string>
    <string name="smsto">簡訊</string>
    <string name="favor">加入常用</string>
    <string name="favorDone">已加入常用清單</string>
    <string name="allContact">全部聯絡人</string>
    <string name="favorContact">常用聯絡人</string>
    <string name="e_mess">我的電子名片</string>
    <string name="drawer_open">Drawer opened</string>
    <string name="drawer_close">Drawer closed</string>

    <!--detail menu-->
    <string name="p1_update">更新資料</string>
    <string name="p2_addFavor">加入常用清單</string>
    <string name="p3_delete">刪除聯絡人</string>

    <!--function title-->
    <string name="fun_updateData">更新</string>
    <string name="fun_deleteData">刪除</string>
    <string name="fun_addFavor">加入常用</string>


    <!--提示語-->
    <string name="welcome_page1">歡迎使用通訊錄小app</string>
    <string name="welcome_page2">可愛又迷人的介面</string>
    <string name="welcome_page3">多種功能超好用！</string>
    <string name="welcome_page4">等不及開始用了吧！！</string>
    <string name="noData">無資料可顯示喔！</string>
    <string name="noAddress">無地址可查看喔！</string>
    <string name="permissonRequest">請先開啟使用者權限</string>
    <string name="addSuccess">新增成功</string>
    <string name="addAvatarOrNot">您可新增大頭照或使用預設圖</string>
    <string name="deleteOK">刪除成功</string>
    <string name="noFavorData">您目前無常用清單</string>
    <string name="noUpdate">未有更新資料！請重新輸入</string>
    <string name="wrongInput">"oops!名稱或電話格式有誤喔！"</string>
    <string name="hint">提示</string>
    <string name="typeDataHere">點此搜尋指定聯絡人</string>
    <string name="sureToUpdate">確定要更新嗎?</string>
    <string name="updateDataOK">更新成功</string>
    <string name="yes">確定</string>
    <string name="no">取消</string>
    <string name="button_menu_camera">拍攝照片</string>
    <string name="button_menu_picture">從相簿中選擇</string>
    <string name="dialog_permission_label_storage_message">存取裝置中的相片、媒體和檔案</string> 
    <string name="dialog_permission_label_camera_message">開啟相機</string> 
    <string name="dialog_permission_label_and">及</string>
    <string name="dialog_title">訊息</string>
    <string name="alreadyaddfavor">此筆已經是常用清單了喔</string>
    <string name="note">備忘錄或介紹詞</string>
    <string name="attention">"注意"</string>
    <string name="deleteOrNot">此功能會永久刪除此聯絡人，確定要繼續嗎？</string>
    <string name="chooseMail">請選擇要寄送的信箱</string>
    <string name="noEmailData">您並無信箱資料喔！</string>
    <string name="addSuccessnotify">哈囉！你剛剛已新增了一位好友</string>
    <string name="welcomeBack">歡迎您回來！</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>


    <string name="facebook_app_id">224145721868033</string>
    <string name="fb_login_protocol_scheme">fb224145721868033</string>

</resources>
