<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.r30_a.recyclerviewpoc.controller.AddProfileActivity">

    <LinearLayout
        android:id="@+id/ContactLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="false"
        android:orientation="vertical"
        android:visibility="visible">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btnFBLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


        <TextView
            android:id="@+id/txv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/addProfile"
            android:textSize="20sp" />

        <FrameLayout
            android:id="@+id/pickUserPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:layout_centerHorizontal="false"
            android:layout_gravity="center"
            android:clickable="true">

            <ImageView
                android:id="@+id/userPhoto"
                android:layout_width="80dp"
                android:layout_height="80dp"

                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:src="@drawable/iconfinder_man_196742" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignBottom="@+id/pickUserPhoto"
                android:layout_alignEnd="@+id/pickUserPhoto"
                android:layout_gravity="right|bottom"
                android:src="@drawable/icons8_camera_24" />

        </FrameLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/addAvatarOrNot" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/edtContactName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/edtPhoneNumber"
                    android:layout_alignParentEnd="false"
                    android:ems="10"
                    android:hint="@string/addName"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/edtPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/btnUpdate"
                    android:layout_alignParentStart="false"
                    android:ems="10"
                    android:hint="@string/addPhone"
                    android:inputType="phone"
                    android:maxLength="10" />

                <EditText
                    android:id="@+id/edtEmail_custom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/edtStreet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/street"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/edtCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:hint="@string/city"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/edtNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/btnUpdate"
                    android:layout_alignParentStart="false"
                    android:hint="@string/note"
                    android:inputType="textPersonName" />

            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="false"
            android:text="新增" />
    </LinearLayout>


</RelativeLayout>
