<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.r30_a.recyclerviewpoc.controller.MainActivity">

    <TextView
        android:id="@+id/txvNews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="新聞焦點" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/txvNews">

    </android.support.v4.view.ViewPager>

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnContactPage"
        android:layout_alignBottom="@+id/btnContactPage"
        android:layout_alignParentStart="true"
        android:text="@string/addProfile" />

    <Button
        android:id="@+id/btnContactPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/ContactPage" />

    <Button
        android:id="@+id/btnSettingPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnContactPage"
        android:layout_alignBottom="@+id/btnContactPage"
        android:layout_alignParentEnd="true"
        android:text="@string/SettingPage" />



</RelativeLayout>
