<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.r30_a.recylerviewpoc.controller.UpdateDataActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PhoneLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/updateTo"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ContactName"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txvDataName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/PhoneLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameLayout"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ContactPhone"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txvDataPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="TextView"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ContactLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="false"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <EditText
            android:id="@+id/edtContactName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/edtPhoneNumber"
            android:layout_alignParentEnd="false"
            android:ems="10"
            android:hint="輸入姓名"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnUpdate"
            android:layout_alignParentStart="false"
            android:ems="10"
            android:hint="輸入電話"
            android:inputType="phone"
            android:maxLength="10" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="false"
            android:text="@string/update" />
    </LinearLayout>

</RelativeLayout>
