<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.r30_a.recylerviewpoc.fragment.UpdateContactFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/functionLayout"
            android:layout_below="@+id/pickUserPhoto">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/dataLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/pickUserPhoto"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txv1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_weight="2"
                            android:text="@string/ContactName"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/edtDataName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:inputType="textPersonName"
                            android:text="@string/none"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txv2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_weight="2"
                            android:text="@string/ContactPhone"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/edtDataPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:inputType="number"
                            android:text="@string/none"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txvCity"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_weight="4"
                            android:text="@string/address"
                            android:textSize="16sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/edtDataCity"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:ems="10"
                                android:gravity="center"
                                android:hint="@string/city"
                                android:inputType="textPersonName" />

                            <EditText
                                android:id="@+id/edtDataStreet"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:hint="@string/street"
                                android:inputType="text"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txv3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_weight="2"
                            android:text="@string/note"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/edtDataNote"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:inputType="text"
                            android:text="@string/none"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/emailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/dataLayout"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txv4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="4"
                            android:text="@string/email"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/emailHomeLayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="住家"
                                android:textSize="16sp" />

                            <EditText
                                android:id="@+id/edtEmail_home"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:inputType="textEmailAddress"
                                android:text="@string/none"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/emailWorkLayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="公司"
                                android:textSize="16sp" />

                            <EditText
                                android:id="@+id/edtEmail_company"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:inputType="textEmailAddress"
                                android:text="@string/none"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/emailOtherLayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="其它"
                                android:textSize="16sp" />

                            <EditText
                                android:id="@+id/edtEmail_other"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:inputType="textEmailAddress"
                                android:text="@string/none"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/emailCustomLayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="自訂"
                                android:textSize="16sp" />

                            <EditText
                                android:id="@+id/edtEmail_custom"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:inputType="textEmailAddress"
                                android:text="@string/none"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <FrameLayout
            android:id="@+id/pickUserPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:clickable="true">

            <ImageView
                android:id="@+id/userPhoto"
                android:layout_width="80dp"
                android:layout_height="80dp"

                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:src="@drawable/iconfinder_man_196742" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignBottom="@+id/pickUserPhoto"
                android:layout_alignEnd="@+id/pickUserPhoto"
                android:layout_gravity="right|bottom"
                android:src="@drawable/icons8_camera_24" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/functionLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_alignParentEnd="false"
                android:layout_alignWithParentIfMissing="false"
                android:layout_centerHorizontal="false"
                android:layout_centerInParent="true"
                android:layout_weight="1"
                android:text="@string/update" />
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
